Bug 347480, Potentially incorrect script context used for event handlers, r+sr=jst, a=brendan